# rust-ptx-builder

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: builder.rs  error.rs  executable.rs  lib.rs  project.rs  proxy.rs  reporter.rs  source.rs  target.rs
src/executable/: command.rs  mod.rs  runner.rs
tests/: builder.rs  executable.rs  project.rs  reporter.rs  source.rs  target.rs
tests/fixtures/app-crate/: Cargo.toml
tests/fixtures/faulty-crate/: Cargo.toml
tests/fixtures/faulty-crate/src/: lib.rs
tests/fixtures/mixed-crate/: Cargo.toml
tests/fixtures/mixed-crate/src/: lib.rs  main.rs
tests/fixtures/sample-crate/: Cargo.toml
tests/fixtures/sample-crate/src/: lib.rs
