[package]
name = "ptx-builder"
version = "0.4.1"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
license = "MIT"

readme = "README.md"
description = "NVPTX build helper"
repository = "https://github.com/denzp/rust-ptx-builder"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["cuda", "nvptx", "gpgpu"]

exclude = [
    "tests/**/*",
]

[dependencies]
error-chain = "0.12"
colored = "1.6"
toml = "0.4"
semver = "0.9"
regex = "0.2"

[dev-dependencies]
lazy_static = "1.0"
antidote = "1.0"

[badges]
appveyor = { repository = "denzp/rust-ptx-builder", branch = "master", service = "github" }
travis-ci = { repository = "denzp/rust-ptx-builder", branch = "master" }
maintenance = { status = "passively-maintained" }
