[package]
name = "ptx-builder"
version = "0.5.3"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
license = "MIT"
edition = "2018"

readme = "README.md"
description = "NVPTX build helper"
repository = "https://github.com/denzp/rust-ptx-builder"
documentation = "https://docs.rs/ptx-builder"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["cuda", "nvptx", "gpgpu"]

exclude = [
    "tests/**/*",
]

[dependencies]
failure = "0.1"
colored = "1.6"
toml = "0.4"
semver = "0.9"
regex = "0.2"
lazy_static = "1.0"

[dev-dependencies]
antidote = "1.0"

[badges]
appveyor = { repository = "denzp/rust-ptx-builder", branch = "master", service = "github" }
travis-ci = { repository = "denzp/rust-ptx-builder", branch = "master" }
maintenance = { status = "passively-maintained" }
